[package]
name = "melo-core-primitives"
description = "Core primitives for Melodot"
license = "Apache-2.0"
version = "0.1.0"
authors = ["DKLee <xiuerdwy@gmail.com>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
melo-das-primitives = { version = "0.1.0", path = "../das-primitives", default-features = false}
melo-erasure-coding = { version = "0.1.0", path = "../melo-erasure-coding", default-features = false}
melo-das-db = { version = "0.0.1", path = "../das-db", default-features = false}

rayon = "1.5.1"
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", optional = true, features = ["alloc", "derive"] }
rand = { version = "0.8", default-features = false, features = ["alloc"] }

sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0" }
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0"  }
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0"  }
sp-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0"  }
sp-arithmetic = { version = "3.0.0", default-features = false }

# For node
sc-client-api = {optional = true, default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0" }
sc-offchain = {optional = true, default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0" }

# For testing
lazy_static = "1.4"
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0" }

[dev-dependencies]
rand = "0.8"
serde_json = "1.0.85"
zstd = { version = "0.12.3", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0" }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0" }

[features]
default = ["std", "outside"]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"serde",
	"rand/std",
	"sp-core/std",
	"sp-runtime/std",
	"melo-das-primitives/std",
	"sp-io/std",
	"sp-std/std",
	"sp-api/std",
    "melo-das-primitives/serde",
	"sp-state-machine/std",
	"sp-tracing/std",
	"sp-application-crypto/std",
	"sc-client-api",
	"sc-offchain",
	"melo-das-db/std",
]
outside = [
    "melo-das-primitives/serde",
	"sc-client-api",
	"sc-offchain",
	"rand/std",
	# "melo-das-db/outside",
]
parallel = [
    "melo-das-primitives/parallel",
]
# Serde support without relying on std features.
serde = [
	"dep:serde",
	"scale-info/serde",
	"sp-core/serde",
	"sp-application-crypto/serde",
]