[package]
name = "melo-das-db"
version = "0.0.1"
description = ""
license = "Apache-2.0"
authors = ["DKLee <xiuerdwy@gmail.com>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false}
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false}
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false}

sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", optional = true}
sc-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", optional = true}

rusqlite = { version = "0.28.0", optional = true }

[dev-dependencies]

[features]
default = ["std"]
std = [
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "rusqlite",
]
outside = [
	"sc-client-api",
	"sc-offchain",
]