[package]
name = "melo-das-db"
version = "0.0.1"
description = ""
license = "Apache-2.0"
authors = ["DKLee <xiuerdwy@gmail.com>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false}
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false}
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false}

sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", optional = true}
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", optional = true}

rusqlite = { version = "0.28.0", optional = true }

[features]
default = ["std","outside"]
std = [
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
]
outside = [
	"sc-client-api",
	"sc-offchain",
]
sqlite = [
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "rusqlite",
]