[package]
name = "melo-das-network"
version = "0.0.1"
description = "Network Core Module in Data Availability."
license = "Apache-2.0"
authors = ["DKLee <xiuerdwy@gmail.com>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
melo-erasure-coding = { path = "../melo-erasure-coding" }
melo-das-primitives = { path = "../das-primitives" }
melo-core-primitives = { path = "../core-primitives" }

async-trait = "0.1.56"
futures = "0.3.21"
tracing = "0.1.37"
log = "0.4"
rand = "0.8"
derive_more = "0.99.17"
anyhow = "1.0.66"
libp2p = { version = "0.50.0", features = ["dns", "metrics", "identify", "kad", "macros", "mdns", "mplex", "noise", "ping", "tcp",  "tokio", "yamux", "websocket"] }
tokio-stream = { version = "0.1" }
tokio = { version = "1.21.2", features = ["macros", "parking_lot", "rt-multi-thread", "sync", "time"] }
prometheus-client = "0.18.1"

frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0" }
node-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0" }
sc-client-api = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0" }
sc-offchain = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0" }
